# cemo

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
cemo/: cli.py
cemo/diff/rotmat/: __init__.py
cemo/geom/: __init__.py  cross_product_matrix.py  exponential_map.py
cemo/img/: __init__.py
cemo/img/f/: cli_random_shift_2d.py  cli_undo_shift_2d.py  gaussian_shift_2d.py  undo_shift_2d.py  uniform_shift_2d.py
cemo/img/t/: EM_Image.py  __init__.py
cemo/io/cs/: CryoSparcCS.py  create.py  get_ctf_params.py  get_rotmat.py  get_shift.py  read.py  read_index_file.py  write.py
cemo/io/mrc/: __init__.py
cemo/io/pdb/: __init__.py
cemo/io/star/: create.py
cemo/io/tensor/: __init__.py
cemo/measure/: __init__.py
cemo/measure/f/: calc_fsc.py  calc_fsc_res.py  calc_rotmat_error.py  calc_shift_error.py  cli_fsc.py  cli_tmat_error.py  plot_fsc.py  reprocess_fsc.py
cemo/noise/angle/: __init__.py  _add_noise.py  _cli_add_angle_noise.py
cemo/parsers/: __init__.py  _add_all_parsers.py  _all_parsers.py
cemo/parsers/diff/: __init__.py
cemo/parsers/file/: __init__.py
cemo/parsers/img/: __init__.py  p_random_shift_2d.py  p_undo_shift_2d.py
cemo/parsers/measure/: __init__.py
cemo/parsers/noise/: __init__.py  p_add_angle_noise.py
cemo/parsers/preprocess/: __init__.py
cemo/parsers/transform/: __init__.py
cemo/preprocess/: __init__.py
cemo/preprocess/concat/: cli_concatcs.py  cli_concatmrcs.py  concatcs.py  concatmrcs.py
cemo/preprocess/formats/: cli_cs2pkls.py  cs2pkls.py  (+3 more)
docker/: cemo.Dockerfile
tests/trim/: Taskfile.yml
(+423 files in other folders)
